@@ -1,0 +1,22 @@
+<!--
+Collection of horrible bugs, disappearing when closely analyzed (urgh!)
+-->
+
+<run>
+<precisionModel type="FLOATING"/>
+<case>
+<desc>
+Heisenbug provided by "Rene Neidt" (r.neidt at idu.de)
+</desc>
+<a>
+	01060000001C000000010300000001000000040000005C8FC245BCA25441F853E3DD919355419133753ABCA25441053861CD91935541E833753ABCA25441853861CD919355415C8FC245BCA25441F853E3DD91935541010300000001000000040000009133753ABCA25441053861CD91935541C520B01ABCA2544123DBF99E919355418833753ABCA25441F83761CD919355419133753ABCA25441053861CD9193554101030000000100000004000000F24283B3B4A254418422B80B87935541FD3F83B3B4A254415B1EB80B879355418FC2F508B4A25441C3F5281C86935541F24283B3B4A254418422B80B87935541010300000001000000070000007B14AE1FB2A25441B072686183935541736891E5AFA25441B81E8533809355412FDD2496AFA25441560E2DC27F9355416A184AE0AFA2544113B2FC2B809355415C8FC2E5AFA254413D0AD733809355412881420FB0A25441B1F5096F809355417B14AE1FB2A25441B07268618393554101030000000100000005000000448B6CD7A9A2544139B4C88E77935541BD7206BDA9A25441E03F2169779355415C8FC2A5A9A2544185EB514877935541AE7206BDA9A25441CB3F216977935541448B6CD7A9A2544139B4C88E7793554101030000000100000004000000AD448E189CA2544144E1C8F86393554154BF62AF9BA25441505D126363935541F6285CAF9BA254413333336363935541AD448E189CA2544144E1C8F863935541010300000001000000040000009CC420189BA2544104560E4D5B935541C74B377197A25441D122DBC15A9355416D707F0798A25441E74A3BD85A9355419CC420189BA2544104560E4D5B9355410103000000010000000400000052B81EED90A25441EC51B83E54935541C1CAA10D8FA2544148E17A7451935541E6A570C18FA2544196EE51805293554152B81EED90A25441EC51B83E5493554101030000000100000004000000ED2D96108BA25441051F3EAB4B9355418A2D96108BA25441761E3EAB4B9355413D0AD7338DA254415C8FC2C54E935541ED2D96108BA25441051F3EAB4B935541010300000001000000040000008DF47DDF8AA2544134CC05644B93554128F47DDF8AA25441A1CB05644B93554152B81E7589A25441713D0A57499355418DF47DDF8AA2544134CC05644B9355410103000000010000000400000004560E2D85A254415A643B4743935541000000D082A25441250681CD3F935541773FCC6B83A25441F25B9AB24093554104560E2D85A254415A643B474393554101030000000100000014000000819543D375A25441000000702D935541B6F3FDE471A254412DB29D5731935541FCA9F1E272A254415C8FC27D31935541C520B02275A25441250681AD34935541B6F3FD8475A254418B6CE72B35935541355EBAA975A25441BC749318359355411B2FDD1C77A2544104560E85379355412FDD243677A254416F1283A83793554139B4C8B677A254413108AC5C389355414A0C029379A254413BDF4F1D3B9355419102F4F578A25441AA6AED343A93554148E17AB477A254417B14AE573893554152B81E3577A2544148E17AA437935541B81E851B77A254410AD7A380379355419A9999A975A254413D0AD7133593554148E17A8475A25441713D0A2735935541295C8F2275A2544185EB51A83493554148E17AE472A25441A4703D7A31935541291701E871A2544182A89F5431935541819543D375A25441000000702D93554101030000000100000006000000B579E52F7FA25441B2E4F0124393554104560E557FA254410C022B57439355417593186C81A254418FC2F540469355413EC2875880A254417C5FD9C04493554152B81E557FA25441713D0A5743935541B579E52F7FA25441B2E4F01243935541010300000001000000070000007593186C81A254418FC2F54046935541DD2406F182A2544189416095489355416ABC744B85A254415839B4C84B935541E94EE8C784A254412D23CB154B93554114AE47F182A2544152B81E95489355412EF656CF81A25441B81E26D9469355417593186C81A254418FC2F5404693554101030000000100000005000000809754BF85A25441F27DDB674C9355416F12839086A254410C022B874D935541652160F887A2544191B2E8894F9355410AD7A39086A25441713D0A874D935541809754BF85A25441F27DDB674C93554101030000000100000006000000666666D688A2544191ED7CC750935541FCA9F1328AA25441AAF1D2BD5293554131A117908AA254417F880C4453935541333333338AA25441E17A14BE5293554123BD00B289A25441541EFD0352935541666666D688A2544191ED7CC7509355410103000000010000000400000031A117908AA254417F880C44539355415839B4108BA25441894160FD5393554149A117908AA25441A1880C445393554131A117908AA254417F880C4453935541010300000001000000040000005839B4108BA25441894160FD53935541FA41670E8CA25441C185F56755935541AF3E670E8CA254410C81F567559355415839B4108BA25441894160FD5393554101030000000100000009000000FA41670E8CA25441C185F56755935541EC51B8568DA25441A01A2F3D579355412FDD24468FA2544104560E0D5A9355410681958B90A2544121B072D85B93554182A07A2C91A25441514995BB5C935541B81E858B90A2544185EB51D85B935541666666468FA25441CDCCCC0C5A935541713D0A578DA25441D7A3703D57935541FA41670E8CA25441C185F567559355410103000000010000000400000082A07A2C91A25441514995BB5C935541B6F3FD6C91A254419EEFA7165D935541C4A37A2C91A25441EA4D95BB5C93554182A07A2C91A25441514995BB5C93554101030000000100000004000000A5A644AD91A25441FE677FDD64935541FCA9F1DA91A25441A245B62B6593554117A844AD91A25441776A7FDD64935541A5A644AD91A25441FE677FDD649355410103000000010000000400000056D0BCD993A25441741BC98B659355415BD2BCD993A25441D51BC98B6593554152B81E6593A254415C8FC2756593554156D0BCD993A25441741BC98B6593554101030000000100000007000000AE47E1BA98A25441DF4F8D97679355416DE7FB619AA25441EE7C3FF569935541BA490C929CA25441D578E9166D935541E8228C9C9AA25441010F13496A9355411F85EB619AA2544152B81EF569935541E90F4B049AA2544185E71F6F69935541AE47E1BA98A25441DF4F8D976793554101030000000100000004000000D34D62989CA25441000000206D9355414A0C025B9DA25441508D97366E9355412C12DF499DA25441E3DE0F1E6E935541D34D62989CA25441000000206D93554101030000000100000004000000D5F04439A0A254416BFCF05872935541E9F34439A0A25441E200F1587293554100000000A1A254418FC2F57873935541D5F04439A0A254416BFCF05872935541010300000001000000040000002FDD247EA2A25441FA7E6A8C759355417F6ABC2CA3A25441BE9F1A7F76935541D2A270D5A2A25441F18DC205769355412FDD247EA2A25441FA7E6A8C75935541010300000001000000050000007F6ABC2CA3A25441BE9F1A7F769355414D412ABFA4A2544170642EBF7893554114AE4771A5A25441E17A14BE79935541B2372ABFA4A25441AF562EBF789355417F6ABC2CA3A25441BE9F1A7F7693554101030000000100000005000000B81E85FBADA25441000000F085935541022B87DEAFA25441F2D24DA2889355417B14AEE7AFA25441F6285CAF88935541EC51B8DEAFA25441295C8FA288935541B81E85FBADA25441000000F085935541
+</a>
+<b>
+	010300000001000000090000001340670E8CA254410883F56755935541713D0A578DA25441D7A3703D57935541666666468FA25441CDCCCC0C5A935541B81E858B90A2544185EB51D85B935541CD9D7A2C91A254417E4595BB5C9355410681958B90A2544121B072D85B9355412FDD24468FA2544104560E0D5A935541EC51B8568DA25441A01A2F3D579355411340670E8CA254410883F56755935541
+</b>
+<test>
+	<op name="areatest">5</op>
+</test>
+</case>
+
+</run>
