@@ -1,3 +1,8 @@
+2007-01-17 Sandro Santilli <strk@refractions.net>
+
+	* tests/xmltester/: heisenbugs.xml, Makefile.am:
+	  New testcase for bug fixed by previous commit.
+
 2007-01-16 Sandro Santilli <strk@refractions.net>
 
 	* source/index/strtree/STRtree.cpp (yComparator): 
